--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,9 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Persönliche Webseite Ivan Jörg</title>
+    <link rel="stylesheet" href="../CSS/Style.css">
+    <!--stylesheet = CSS-Datei für das Design einer Webseite.
+    href="../CSS/Style.css" = Ablageort-->
 </head>
 
 <body>
+  <!--Hier wird der Navigationsbalken erzeugt-->
     <nav>
     <ul>
       <li><a href="index.html">News</a></li>
@@ -15,6 +19,7 @@
     </ul>
   </nav>
 
+  <!--Hier kommt der Newsblock für die Startseite-->
   <h1>News</h1>
   <p>Hier werden später alle News dargestellt werden</p>
 
