--- a/HTML/ueber.html
+++ b/HTML/ueber.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Ueber mich</title>
+    <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 
 <body>
+  
     <nav>
     <ul>
       <li><a href="index.html">News</a></li>
@@ -16,7 +18,19 @@
   </nav>
 
   <h1>Ueber mich</h1>
- <img src="ivan.jpg" alt="Ivan" title="Das bin Ich">
+ <img src="../Fotos/ivan.jpg" alt="Ivan" title="Das bin Ich">
+ 
+ <p>
+    <h2>Persönliche Daten</h2>
+      <li>Name: Jörg</li>
+      <li>Vorname: Ivan</li>
+      <li>Geb.Datum: 09.08.1977</li>
+      <li>Bürgerort: Domat/Ems GR</li>
+ </p>
+
+
+
+ 
  
 
 
