--- a/HTML/impressum.html
+++ b/HTML/impressum.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Impressumm</title>
+    <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 
 <body>
