--- a/HTML/impressum.html
+++ b/HTML/impressum.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Impressumm</title>
+    <title>Impressum</title>
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 
