--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html> <!-- html typ-->
-<html lang="de-ch"> <!-- Sprache Schweizerdeutsch-->
+<html lang="de-ch"> <!-- lang=Sprache de-ch=Schweizerdeutsch-->
 
 <head>
-    <meta charset="UTF-8">
-    <title>Persönliche Webseite Ivan Jörg</title>
+    <meta charset="UTF-8"> <!--Zeichensatz zur Darstellung benutzen-->
+    <title>Persönliche Webseite Ivan Jörg</title> <!--Seitentitel der im Tab angezeigt wird-->
+
     <link rel="stylesheet" href="../CSS/Style.css">
     <!--stylesheet = CSS-Datei für das Design einer Webseite.
     href="../CSS/Style.css" = Ablageort-->
