--- a/HTML/ueber.html
+++ b/HTML/ueber.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ueber mich</title>
     <link rel="stylesheet" href="../CSS/Style.css">
 </head>
@@ -13,6 +14,7 @@
     <ul>
       <li><a href="index.html">News</a></li>
       <li><a href="ueber.html">Über Mich</a></li>
+      <li><a href="weiterbildung.html">Berufliche Weiterbildung</a></li>
       <li><a href="impressum.html">Impressum</a></li>
     </ul>
   </nav>
@@ -21,18 +23,16 @@
  <img src="../Fotos/ivan.jpg" alt="Ivan" title="Das bin Ich">
  
  <p>
-    <h2>Persönliche Daten</h2>
+     <h2>Persönliche Daten</h2>
       <li>Name: Jörg</li>
-      <li>Vorname: Ivan</li>
+      <li>Vorname(n): Ivan Reto</li>
       <li>Geb.Datum: 09.08.1977</li>
+      <li>Geburtsort: Winterthur</li>
       <li>Bürgerort: Domat/Ems GR</li>
+      <li>Strasse: Grossfeldstrasse 2</li>
+      <li>Wohnort: CH-8887 Mels SG</li>
+      <li>Zivilstand: ledig, keine Kinder</li>
  </p>
-
-
-
- 
- 
-
 
 
 </body>
