--- a/HTML/impressum.html
+++ b/HTML/impressum.html
@@ -12,6 +12,7 @@
     <ul>
       <li><a href="index.html">News</a></li>
       <li><a href="ueber.html">Über Mich</a></li>
+      <li><a href="weiterbildung.html">Berufliche Weiterbildung</a></li>
       <li><a href="impressum.html">Impressum</a></li>
     </ul>
   </nav>
@@ -21,7 +22,6 @@
         Ivan Jörg <br>
         Grossfeldstrasse 2 <br>
         8887 Mels SG <br>
-        <br>
         <strong>Kontakt:</strong><br>
         Tel: 079 954 24 70<br>
         Mail: irj@bluewin.ch
