--- a/HTML/ueber.html
+++ b/HTML/ueber.html
@@ -14,7 +14,6 @@
     <ul>
       <li><a href="index.html">News</a></li>
       <li><a href="ueber.html">Über Mich</a></li>
-      <li><a href="weiterbildung.html">Berufliche Weiterbildung</a></li>
       <li><a href="impressum.html">Impressum</a></li>
     </ul>
   </nav>
@@ -33,7 +32,14 @@
       <li>Wohnort: CH-8887 Mels SG</li>
       <li>Zivilstand: ledig, keine Kinder</li>
  </p>
-
+<br>
+<br>
+  <nav>
+    <ul>
+      <li><a href="weiterbildung.html">Berufliche Aus- und Weiterbildung</a></li>
+      <li><a href="werdegang.html">Beruflicher Werdegang</li>
+    </ul>
+  </nav>
 
 </body>
 
