Hobbys erweitert, Logo eingefügt

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,6 +20,8 @@
     </ul>
   </nav>
 
+  <img src="../Fotos/logo_irj.png" alt="IRJ Logo">
+  
   <!--Hier kommt der Newsblock für die Startseite-->
   <h1>News</h1>
   <p>Hier werden später alle News dargestellt werden</p>
