--- a/HTML/ueber.html
+++ b/HTML/ueber.html
@@ -38,6 +38,7 @@
     <ul>
       <li><a href="weiterbildung.html">Berufliche Aus- und Weiterbildung</a></li>
       <li><a href="werdegang.html">Beruflicher Werdegang</li>
+      <li><a href="hobbys.html">Hobbys</li>
     </ul>
   </nav>
 
